tests/bad/func/unknown_input_type.go
package main;

func f (n s) {
}

func main (){}


/*
== Expected compiler output ==
File "./tests/bad/func/unknown_input_type.go", line 3, characters 8-9:
error: In function f, type s not well defined
*/